[gd_scene load_steps=21 format=3 uid="uid://dbu3nhjymm7wd"]

[ext_resource type="Script" uid="uid://bydwhkfoet5ro" path="res://scripts/balloon.gd" id="1_36de5"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Texture2D" uid="uid://dqvjx7l0qbr5c" path="res://assets/ui/dialogue_box.png" id="2_hn6a2"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_72ixx"]
[ext_resource type="Theme" uid="uid://ba4s4eln16e7s" path="res://assets/styles/button.tres" id="5_8ukbd"]
[ext_resource type="Texture2D" uid="uid://cywg53trb47id" path="res://assets/ui/dialogue_box-nameinput.png" id="5_enw0g"]
[ext_resource type="Texture2D" uid="uid://c6p7xunmgl2r4" path="res://assets/ui/dialogue_box_face.png" id="6_pfdox"]
[ext_resource type="AudioStream" uid="uid://boqabqnpg5di8" path="res://music/dialogue/text0.ogg" id="8_ef3h0"]
[ext_resource type="AudioStream" uid="uid://fct3cufx70e5" path="res://music/dialogue/text1.ogg" id="9_konce"]
[ext_resource type="AudioStream" uid="uid://bphsfml3s5w8r" path="res://music/dialogue/text2.ogg" id="10_sd46h"]
[ext_resource type="AudioStream" uid="uid://u2anjt7j1hjm" path="res://music/dialogue/text3.ogg" id="11_wd64n"]
[ext_resource type="AudioStream" uid="uid://pctdkxcc8kaf" path="res://music/dialogue/text4.ogg" id="12_5x8ac"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkmqt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxFlat_qkmqt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_enw0g"]
texture = ExtResource("2_hn6a2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pfdox"]
texture = ExtResource("5_enw0g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3rid"]
texture = ExtResource("6_pfdox")

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_36de5")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 45.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -124.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="Balloon/MarginContainer"]
clip_children = 2
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_enw0g")

[node name="MarginContainer" type="MarginContainer" parent="Balloon/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="DialogueLabel" parent="Balloon/MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue..."
visible_characters_behavior = 0
seconds_per_step = 0.03
seconds_per_pause_step = 0.1

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = 16.5
offset_right = -44.0
offset_bottom = 43.5
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/ResponsesMenu"]
layout_mode = 2
theme = ExtResource("5_8ukbd")
theme_type_variation = &"FlatButton"
text = "Response example"

[node name="MarginContainer2" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -166.0
offset_right = 131.93
offset_bottom = -98.0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="Balloon/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pfdox")

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/MarginContainer2/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/MarginContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "CHARACTER"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -242.0
offset_right = -4.0
offset_bottom = -99.0
grow_horizontal = 0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="Balloon/MarginContainer3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t3rid")

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/MarginContainer3/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Portrait" type="TextureRect" parent="Balloon/MarginContainer3/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 3

[node name="talk-sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ef3h0")
volume_db = -63.327

[node name="talk-sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_konce")
volume_db = -68.874

[node name="talk-sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_sd46h")
volume_db = -64.677

[node name="talk-sound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_wd64n")
volume_db = -71.92
pitch_scale = 0.84

[node name="talk-sound5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_5x8ac")
volume_db = -73.473

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="spoke" from="Balloon/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/DialogueLabel" to="." method="_on_dialogue_label_spoke"]
[connection signal="response_selected" from="Balloon/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
